add workaround for openapi